...
    props.handleRefreshSearch(0, 15);
  };

  return (
    <>
      <StatusBar barStyle="dark-content" />
      <SafeAreaView testID="welcome" style={styles.safeViewStyles}>
        <AppHeader
          hideArrow
          pageName={'Cats List'}
          navigation={props.navigation}
        />
        <SearchComp onSearchClick={handleSearchClick} />
...
