...
            data={`${props.selectedCatDetails?.child_friendly}/5`}
          />

          <View style={styles.linkingView}>
            <Text style={styles.textStyles}>Read More</Text>
            <Text
              testID={'wiki-Url'}
              onPress={handleOpeningUrl}
              style={styles.urlStyles}>
              {props.selectedCatDetails?.wikipedia_url}
            </Text>
          </View>
        </ScrollView>
...
